--- a/Project.Rmd
+++ b/Project.Rmd
@@ -30,7 +30,7 @@ Shuarya Pratap Singh
 * In your other files, you can load these using the `TABLE <- read_rds("data/FILENAME.rda")` function.
 
 ## Part II: EDA of individual tables
-
+Aden Tao
 
 * For each of the 4 tables, perform basic exploratory data analysis. Report the following information:
   * For each quantitative column, provide some summary statistics
@@ -58,6 +58,7 @@ Hania Timek
 * Use the `model.matrix` function in the following way: `model.matrix(yourtalltable, ~ genre - 1)` to create a wide table with one column for each genre. Use this table to find the most common pair of genres (hint: use the `cor` function or produce facet plots)
 
 ## Part IV: Joining Tables
+Aden Tao
 
 * Join the table with one title-genre per row from the previous section with the ratings table.
   * What is the highest rated genre? What is the lowest rated genre?
@@ -78,10 +79,11 @@ Shaurya Pratap Singh
 * One task we performed involved counting items in strings separated by commas. Propose two different functions that could perform this taks. Compare them using bench marking. Which version would you recommend?
 
 ## Part VI: Shiny Applications
-Hania Timek
+Hania Timek is doing this part
 ### Application 1
 
 Using results from the previous section, create a shiny application that allows users to interact with the with the IMDb data. The application should use both interactive graphs and at least 3 widgets.
+
 
 ### Application 2
 
